force-app/main/default/objects/dbt__Project_Charge_code__c/dbt__Project_Charge_code__c.object-meta.xml
<CustomObject>
    <label>Project-Charge code</label>
    <nameField>
        <label>Project-Charge code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project-Charge codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>