force-app/main/default/objects/dbt__Project_Charge_code__c/fields/dbt__Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>dbt__Charge_Code__c</fullName>
    <label>Charge Code</label>
    <referenceTo>dbt__Charge_Code__c</referenceTo>
    <relationshipLabel>Project-Charge codes</relationshipLabel>
    <relationshipName>Project_Charge_codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>