force-app/main/default/objects/dbt__Project_Charge_code__c/fields/dbt__Project__c.field-meta.xml
<CustomField>
    <fullName>dbt__Project__c</fullName>
    <label>Project</label>
    <referenceTo>dbt__Project__c</referenceTo>
    <relationshipLabel>Project-Charge codes</relationshipLabel>
    <relationshipName>Project_Charge_codes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>